# django-watchman

./: .checkignore  .dockerignore  .editorconfig  .flake8  .gitignore  .landscape.yml  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  RELEASING.md  RELEASING.rst  SECURITY.md  Vagrantfile  justfile  mkdocs.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  runtests.py  setup.py  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml  isort.yml  publish.yml  python-package.yml
docs/: checks.md  conf.py  configuration.md  docker.md  getting-started.md  index.md  index.rst  installation.rst  modules.rst  usage.rst  watchman.rst
docs/reference/: api.md  monitoring-integrations.md
provisioning/: playbook.yml
provisioning/templates/: .bashrc.j2
sample_project/: manage.py  requirements.txt
sample_project/sample_project/: checks.py  settings.py  urls.py  wsgi.py
tests/: .test_decorators.py.swp  conftest.py  settings.py  test_decorators.py  test_management.py  test_models.py  test_utils.py  test_views.py
watchman/: __init__.py  checks.py  constants.py  decorators.py  settings.py  types.py  urls.py  utils.py  views.py
watchman/management/commands/: watchman.py
watchman/templates/watchman/: base.html  dashboard.html
